--- a/.github/workflows/3way-option.yml
+++ b/.github/workflows/3way-option.yml
@@ -70,13 +70,14 @@ jobs:
 
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
+          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+          git pull --rebase
           git add solar_state.txt
           git commit -m "Set status=running"
-          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
           git push
           echo "✅ ตั้งสถานะเป็น running แล้ว"
 
-          if [ "$SOC" = "$LAST_SOC" ]; then
+          if [ "$SOC" -eq "$LAST_SOC" ]; then
             SOC_CHANGED="false"
           fi
 
@@ -87,7 +88,7 @@ jobs:
           echo "ever_low_batt=$EVER_LOW_BATT" >> $GITHUB_OUTPUT
           echo "first_time=$FIRST_TIME" >> $GITHUB_OUTPUT
           echo "soc_changed=$SOC_CHANGED" >> $GITHUB_OUTPUT
-
+          
       - name: วิเคราะห์สถานะ
         id: check_mode
         env:
@@ -137,6 +138,7 @@ jobs:
             echo "ever_low_batt=$EVER_LOW_BATT" >> $GITHUB_OUTPUT
             exit 0
           fi
+
           if [ "$SOC" -le 25 ]; then
             EVENT_TEXT="Low_Batt"
             NEW_MODE="low_batt"
@@ -247,6 +249,8 @@ jobs:
 
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
+          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+          git pull --rebase
           git add solar_state.txt
           git diff --quiet && git diff --staged --quiet || git commit -m "Update solar_state.txt"
           git push
